# backend/pkg/router/shortUrl/short_url.go
@@ -44,14 +44,14 @@ func (s *shortUrlRouter) Hello(ctx *gin.Context) {
 	return
 }
 
-//		GetShortLink 获取短链接
+// GetShortLink 获取短链接
 //
-//		@Tags			获取锻链接
-//		@Summary		获取锻链接
-//		@Description	获取锻链接
-//		@Router			/openapis/short [post]
-//	 	@Param 			url		form 	string true "原始的长链接"
-//		@Success		200	{object}	utils.Response{data=string,msg=string}
+// @Tags			获取锻链接
+// @Summary		获取锻链接
+// @Description	获取锻链接
+// @Router			/openapis/short 	[post]
+// @Param			url					formData	string	true	"原始的长链接"
+// @Success		200					{object}	utils.Response{msg=string}
 func (s *shortUrlRouter) GetShortLink(ctx *gin.Context) {
 	url, ok := ctx.GetPostForm("url")
 	if !ok {
@@ -68,14 +68,14 @@ func (s *shortUrlRouter) GetShortLink(ctx *gin.Context) {
 	utils.OkWithData(shortUrl, ctx)
 }
 
-//		GetLink 获取短链接
+// GetLink 获取短链接
 //
-//		@Tags			短链接跳转
-//		@Summary		短链接跳转
-//		@Description	短链接跳转
-//		@Router			/openapis/*shortlink [get]
-//	 	@Param 			shortlink		path 	string true "短链接"
-//		@Success		200	{object}	utils.Response{data=string,msg=string}
+// @Tags			短链接跳转
+// @Summary		短链接跳转
+// @Description	短链接跳转
+// @Router			/openapis/ 				[get]
+// @Param			shortlink	path		string	true	"短链接"
+// @Success		200			{object}	utils.Response{msg=string}
 func (s *shortUrlRouter) GetLink(ctx *gin.Context) {
 	shortlink := ctx.Param("shortlink")
 	split := strings.Split(shortlink, "/")
