# docs/swagger.json
@@ -6,6 +6,44 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/openapis/": {
+            "get": {
+                "description": "短链接跳转",
+                "tags": [
+                    "短链接跳转"
+                ],
+                "summary": "短链接跳转",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "短链接",
+                        "name": "shortlink",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/utils.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "msg": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/openapis/hello": {
             "get": {
                 "description": "健康检查",
@@ -34,6 +72,44 @@
                     }
                 }
             }
+        },
+        "/openapis/short": {
+            "post": {
+                "description": "获取锻链接",
+                "tags": [
+                    "获取锻链接"
+                ],
+                "summary": "获取锻链接",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "原始的长链接",
+                        "name": "url",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/utils.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "msg": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -41,11 +117,13 @@
             "type": "object",
             "properties": {
                 "code": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 7
                 },
                 "data": {},
                 "msg": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "successed"
                 }
             }
         }
